# TE_approximation

./: .gitignore  CMakeLists.txt  grid_1.msh  main.cpp  test.vtu  test_vtu.cpp  test_vtu.h
rez/wave/grid1/: state_17.vtu
rez_1_order/meshes/: grid3.msh  grid4.msh
rez_1_order/wave/grid4/: state_0.vtu  state_1.vtu  state_10.vtu  state_2.vtu  state_3.vtu  state_4.vtu  state_5.vtu  state_6.vtu  state_7.vtu  state_8.vtu  state_9.vtu
rez_2_order/meshes/: grid1.msh  grid2.msh
rez_2_order/wave/grid4/: state_0.vtu  state_1.vtu  state_10.vtu  state_2.vtu  state_3.vtu  state_4.vtu  state_5.vtu  state_6.vtu  state_7.vtu  state_8.vtu  state_9.vtu
utils/: CMakeLists.txt  approximation.cpp  approximation.h  calculate.cpp  calculate.h  initial_conditions.cpp  initial_conditions.h  make_grid.cpp  make_grid.h  make_vtu.cpp  make_vtu.h  test_boost.cpp  test_boost.h  utils.cpp  utils.h
